fix(Search): style error in dark mode (#10527)

--- a/packages/vant/src/search/index.less
+++ b/packages/vant/src/search/index.less
@@ -1,7 +1,7 @@
 body {
   --van-search-padding: 10px var(--van-padding-sm);
   --van-search-background: var(--van-background-2);
-  --van-search-content-background: var(--van-gray-1);
+  --van-search-content-background: var(--van-background);
   --van-search-input-height: 34px;
   --van-search-label-padding: 0 5px;
   --van-search-label-color: var(--van-text-color);
